--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -84,7 +84,13 @@
             <artifactId>openpdf</artifactId>
             <version>1.3.39</version>
         </dependency>
-        
+
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.17.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -96,3 +102,4 @@
         </plugins>
     </build>
 </project>
+
